--- a/src/main/webapp/WEB-INF/views/books/getBooks.html
+++ b/src/main/webapp/WEB-INF/views/books/getBooks.html
@@ -18,5 +18,9 @@
   <input type="submit" value="Перейти к пользователям">
 </form>
 
+<form th:method="GET" th:action="@{/books/new}">
+  <input type="submit" value="Создать новую книгу">
+</form>
+
 </body>
 </html>
