--- a/src/main/webapp/WEB-INF/views/books/getBookById.html
+++ b/src/main/webapp/WEB-INF/views/books/getBookById.html
@@ -16,9 +16,11 @@
 
 <div th:if="${owner}">
   <span> Книга сейчас у: </span> <span th:text="${owner.getFullName()}">Person name</span>
+  <a th:href="@{/people/{id}(id=${book.id})}">Перейти на страницу человека</a>
   <form th:method="POST" th:action="@{/books/{id}/release(id=${book.getId()})}">
     <input type="submit" value="Освободить книгу"/>
   </form>
+
 </div>
 
 <div th:if="${people}">
